--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,9 +10,9 @@
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/dcbapp
-spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.url=jdbc:mysql://localhost:3306/SBDB
+spring.datasource.username=mg
+spring.datasource.password=12345
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 spring.jpa.show-sql: true
 
