--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+#server.port = 8082
+#
+#welcome.message = Welcome to Daily Code Buffer!!
+#
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:dcbapp
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=mg
+#spring.datasource.password=12345
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/SBDB
+spring.datasource.username=mg
+spring.datasource.password=12345
+spring.datasource.driver-class-name =com.mysql.jdbc.Driver
+spring.jpa.show-sql: true
 
